--- a/src/app/pages/inventory/inventory-assign/inventory-assign.component.html
+++ b/src/app/pages/inventory/inventory-assign/inventory-assign.component.html
@@ -15,7 +15,7 @@
     <div class="input-group">
       <input class="form-control with-success-addon" placeholder="quantity number" type="number" [(ngModel)]="checks">
         <span class="input-group-addon"><button class="btn btn-info" (click)="[fifthModal.open(), inventoryData()]">
-          <i class="fas fa-mobile"></i>
+          <i class="fa fa-mobile"></i>
         </button>
       </span>
     </div>
