--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,7 +1,8 @@
 <div class="card card-block login-card">
   <h3 class="form-label">Welcome Back</h3>
-  <span class="form-label">sign in to continue to Lines</span>
-    <div class="form-group">
+  <span class="form-label">sign in to continue</span>
+  <!-- <form > -->
+    <div class="form-group" >
       <div class="input-group" >
         <span class="input-group-addon addon-left" id="username">
           <i class="fa fa-user fa-fw"></i>
@@ -16,4 +17,5 @@
       </div>
       <button class="btn btn-lg btn-primary" (click)="login()">Login</button>
     </div>
+  <!-- </form> -->
 </div>
